# multi_agent_e-commerce

./: .gitignore  PROJE_DOKUMANTASYONU.md  README.md
backend/: .env.example  README_BACKEND.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 15ad1789e00a_add_orders_table.py  3eab2a76ad3e_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: data_agent.py  graph.py  llm.py  logistics.py  negotiator.py  orchestrator.py  prompts.py  state.py
backend/app/api/: cart.py  chat.py  checkout.py  products.py  seller.py  ws_logs.py
backend/app/models/: __init__.py  agent_log.py  customer.py  order.py  product.py  seller.py  session.py
backend/app/schemas/: chat.py  product.py  seller.py  session.py
backend/app/seed/: customers.json  products.json  seed_data.py  sellers.json
backend/app/services/: carbon.py  logging.py  pricing.py  segmentation.py
backend/scripts/: explore_responses.py  verify_fixes.py
backend/tests/: test_agents.py  test_carbon.py  test_e2e.py  test_pricing.py  test_websocket.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: cart.ts  chat.ts  client.ts  products.ts  seller.ts
frontend/src/components/customer/: EkoChat.tsx  PersonaSelector.tsx  ProductCard.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: CartPage.tsx  CustomerPage.tsx  HomePage.tsx  SellerDashboardPage.tsx
frontend/src/store/: cartStore.ts  chatStore.ts  sessionStore.ts
frontend/src/utils/: constants.ts  format.ts
(+1 files in other folders)
