[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eko-backend"
version = "0.1.0"
description = "EKO — Akıllı Sepet Asistanı Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that call the real Gemini API (slow, requires GEMINI_API_KEY)",
]
